# formulate

./: Cargo.toml  LICENSE  README.md  Rocket.toml.template
.github/workflows/: rust-workflow.yml
rc.d-scripts/: formulate
src/: mailer.rs  main.rs  strings.rs  tests.rs
