[package]
name = "send-contact-form"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
lettre = { version = "0.10.0-rc.4", features = ["sendmail-transport"] }
# sendmail = "2.0.0"
# validator = { version = "0.14", features = ["derive"] }

[profile.release]
# Works as of rust 1.59.0
# strip = "debuginfo"