[package]
name = "formulate"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
lettre = { version = "0.10.0", features = ["sendmail-transport"] }
validator = { version = "0.14", features = ["derive"] }

[profile.release]
# Works as of rust 1.59.0
strip = "debuginfo"
